--- a/javascript/effect/quizEffect05.html
+++ b/javascript/effect/quizEffect05.html
@@ -55,7 +55,7 @@
         //문제정보
         const quizInfo = [
             { //01번
-                answerType: "웹디자인 기능사 2015년 07월",
+                answerType: "웹디자인 기능사 2014년 04회",
                 answerNum: "1",
                 answerAsk: "주전자, 냉장고, 자동차를 디자인하는 디자인 영역은?",
                 answerChoice: {
@@ -132,6 +132,136 @@
                 answerResult: "2",
                 answerEx: "전체적인 가치를 따지기 위해서는 조건 중 경제성입니다.."
             }
+            { //07번 ------------------------------------------ 여기서 부터 답 적어야 함
+                answerType: "웹디자인 기능사 2014년 04회",
+                answerNum: "7",
+                answerAsk: "컬러 인쇄를 위해 C, M, Y, K 4색의 네거필름으로 만드는 과 정을 무엇이라 하는가?",
+                answerChoice: {
+                    1: "합목적성",
+                    2: "경제성",
+                    3: "심미성",
+                    4: "독창성"
+                },
+                answerResult: "2",
+                answerEx: "전체적인 가치를 따지기 위해서는 조건 중 경제성입니다.."
+            },
+            { //08번
+                answerType: "웹디자인 기능사 2014년 04회",
+                answerNum: "8",
+                answerAsk: "컬러 인쇄를 위해 C, M, Y, K 4색의 네거필름으로 만드는 과 정을 무엇이라 하는가?",
+                answerChoice: {
+                    1: "유기적 형태",
+                    2: "기하학적 형태",
+                    3: "내부적 형태 ",
+                    4: "자연적 형태"
+                },
+                answerResult: "2",
+                answerEx: "전체적인 가치를 따지기 위해서는 조건 중 경제성입니다.."
+            },
+            { //09번
+                answerType: "웹디자인 기능사 2014년 04회",
+                answerNum: "9",
+                answerAsk: "배색을 할 때 고려해야하는 사항으로 적절하지 않은 것은?",
+                answerChoice: {
+                    1: "사물의 성능이나 기능에 부합되는 배색을 하여 주변과 어울릴 수 있도록 한다.",
+                    2: "사용자 성별, 연령을 고려하여 편안한 느낌을 가질 수 있 도록 한다.",
+                    3: "색의 이미지를 통해서 전달하려는 목적이나 기능을 기준 으로 배색한다.",
+                    4: "목적에 관계없이 아름다움을 우선으로 하고, 타 제품에 비해 눈에 띄는 색으로 배색하여야 한다."
+                },
+                answerResult: "2",
+                answerEx: "전체적인 가치를 따지기 위해서는 조건 중 경제성입니다.."
+            },
+            { //10번
+                answerType: "웹디자인 기능사 2014년 04회",
+                answerNum: "10",
+                answerAsk: "색의 점이(점증)는 디자인의 원리 중 어느 영역에 속하는가?",
+                answerChoice: {
+                    1: "통일",
+                    2: "율동",
+                    3: "반복",
+                    4: "조화"
+                },
+                answerResult: "2",
+                answerEx: "전체적인 가치를 따지기 위해서는 조건 중 경제성입니다.."
+            },
+            { //11번
+                answerType: "웹디자인 기능사 2014년 04회",
+                answerNum: "11",
+                answerAsk: "다음 중 디자인의 조건에 해당하지 않는 것은?",
+                answerChoice: {
+                    1: "합목적성",
+                    2: "심미성",
+                    3: "경제성",
+                    4: "유통성"
+                },
+                answerResult: "2",
+                answerEx: "전체적인 가치를 따지기 위해서는 조건 중 경제성입니다.."
+            },
+            { //12번
+                answerType: "웹디자인 기능사 2014년 04회",
+                answerNum: "12",
+                answerAsk: "물리적인 빛이 우리의 눈에서 색채로 지각되어 범위의 파장 한계 내에 있는 스펙트럼을 의미하는 것은?",
+                answerChoice: {
+                    1: "가시광선",
+                    2: "색청",
+                    3: "색각",
+                    4: "지각색"
+                },
+                answerResult: "2",
+                answerEx: "전체적인 가치를 따지기 위해서는 조건 중 경제성입니다.."
+            },
+            { //13번
+                answerType: "웹디자인 기능사 2014년 04회",
+                answerNum: "13",
+                answerAsk: "미술공예운동이 일어나게 된 사회적 배경으로 옳은 것은?",
+                answerChoice: {
+                    1: "기계화와 대량생산으로 인한 생활용품의 품질저하",
+                    2: "기계화에 의한 장비설치로 생활용품의 가격 폭등",
+                    3: "기계화로 생활용품에 화려하고 복잡한 장식을 사용할 수 없게 됨",
+                    4: "대량생산으로 생활용품의 대중화"
+                },
+                answerResult: "2",
+                answerEx: "전체적인 가치를 따지기 위해서는 조건 중 경제성입니다.."
+            },
+            { //14번
+                answerType: "웹디자인 기능사 2014년 04회",
+                answerNum: "14",
+                answerAsk: "영과 헬름홀츠가 처음으로 발표한 학설로 색광의 3원색인 RGB 혼합으로 혼합할수록 밝아지며, 다른 색광을 혼합해서 다시 원색을 만들 수 있으며, 플러스 혼합이라고도 불리우는 색의 혼합은?",
+                answerChoice: {
+                    1: "감산 혼합",
+                    2: "가산 혼합",
+                    3: "병치 혼합",
+                    4: "중간 혼합"
+                },
+                answerResult: "2",
+                answerEx: "전체적인 가치를 따지기 위해서는 조건 중 경제성입니다.."
+            },
+            { //15번
+                answerType: "웹디자인 기능사 2014년 04회",
+                answerNum: "15",
+                answerAsk: "빛을 감지할 수 있는 하나의 수단으로 물리적 반사 법칙에 의해 정확하고, 엄밀한 투사광과 반사광으로 구성된 과학적 결과에 해당하는 용어는?",
+                answerChoice: {
+                    1: "색채",
+                    2: "시지각",
+                    3: "형태",
+                    4: "음영"
+                },
+                answerResult: "2",
+                answerEx: "전체적인 가치를 따지기 위해서는 조건 중 경제성입니다.."
+            },
+            { //16번
+                answerType: "웹디자인 기능사 2014년 04회",
+                answerNum: "16",
+                answerAsk: "색의 3속성에 포함되지 않는 것은?",
+                answerChoice: {
+                    1: "색상",
+                    2: "명도",
+                    3: "대비",
+                    4: "채도"
+                },
+                answerResult: "2",
+                answerEx: "전체적인 가치를 따지기 위해서는 조건 중 경제성입니다.."
+            },
         ];
 
         //선택자
