--- a/site/cardType/cardType03.html
+++ b/site/cardType/cardType03.html
@@ -156,7 +156,7 @@
         }
         .card .card__footer h4 {
             text-align: right;
-            color: #dd2a2a;
+            color: #188422;
         }
         .card .card__footer em {
             display: block;
@@ -185,42 +185,42 @@
             <article class="card">
                 <figure class="card__header">
                     <img src="img/card_bg03_01.jpg" alt="">
-                    <figcaption>Architects</figcaption>
+                    <figcaption>Washing</figcaption>
                 </figure>
                 <div class="card__contents">
-                    <h3>건축은 건물이나 다른 구조물을 계획하고 설계하고 건설하는 과정과 그 결과..</h3>
-                    <p>건축은 건물이나 다른 구조물을 계획하고 설계하고 건설하는 과정과 그 결과 설계하고 건설하는 과정과 그 결과 설계하고 건설하는 과정과 그 결과..</p>
+                    <h3>다들 손을 씻고 계신가요? 손을 씻는다는것은 참 중요한 문제이며 인류가 해결해야할</h3>
+                    <p>손을 씻는것은 상당히 중요한 행동입니다, 손을 씻음으로써 병을 예방할 수 있고 각종 미세먼지와 세균에서 벗어날 수 있기 때문에 되도록이면 모두들</p>
                 </div>
                 <div class="card__footer">
-                    <h4>건축박사 <em>Hesperioidea</em></h4>
+                    <h4>dr. junjun <em>9 resources</em></h4>
                     <span><img src="img/card_bg03_icon01.png" alt="Hesperioidea"></span>
                 </div>
             </article>
             <article class="card">
                 <figure class="card__header">
                     <img src="img/card_bg03_02.jpg" alt="">
-                    <figcaption>Architects</figcaption>
+                    <figcaption>Carefully</figcaption>
                 </figure>
                 <div class="card__contents">
-                    <h3>건축은 건물이나 다른 구조물을 계획하고 설계하고 건설하는 과정과 그 결과..</h3>
-                    <p>건축은 건물이나 다른 구조물을 계획하고 설계하고 건설하는 과정과 설계하고 건설하는 과정과 그 결과 설계하고 건설하는 과정과 그 결과 그 결과..</p>
+                    <h3>손을 꼼꼼히 씻고 계신가요? 손을 씻었다 하여도 손에 물이 닿았다는 것만으로도 씻었다고 하시는</h3>
+                    <p>미국 질병예방통제센터에서는 20초가량 손을 문지르며 구석구석 씻을 것을 권고하였으며 손에 물이 닿았다는 것만으로도 닦았다는 사람들을 위해 올바른 손닦기를 권장하고 있습니다</p>
                 </div>
                 <div class="card__footer">
-                    <h4>건축박사 <em>Hesperioidea</em></h4>
+                    <h4>dr. heck <em>9 resources</em></h4>
                     <span><img src="img/card_bg03_icon02.png" alt="Hesperioidea"></span>
                 </div>
             </article>
             <article class="card">
                 <figure class="card__header">
                     <img src="img/card_bg03_03.jpg" alt="">
-                    <figcaption>Architects</figcaption>
+                    <figcaption>Just In Time</figcaption>
                 </figure>
                 <div class="card__contents">
-                    <h3>건축은 건물이나 다른 구조물을 계획하고 설계하고 건설하는 과정과 그 결과..</h3>
-                    <p>건축은 건물이나 다른 구조물을 계획하고 설계하고 건설하는 과정과 그 결과..</p>
+                    <h3>약은 절대 거르지 않고 정해진 시간 정해진 날에 꼭 드셔야하며 약사가 정해준 약만 드셔야 합니다</h3>
+                    <p>약은 꼭 제때제때 드셔야 합니다 안그러면 몸에 항채가 생겨 약의 효과가 나타나지 않을수가 있기 때문에 항상 모든 주의 사항을 준수하면서도 제 시간에 맞게 드시는 습관을 길러야 합니다.</p>
                 </div>
                 <div class="card__footer">
-                    <h4>건축박사 <em>Hesperioidea</em></h4>
+                    <h4>dr. jo <em>9 resources</em></h4>
                     <span><img src="img/card_bg03_icon03.png" alt="Hesperioidea"></span>
                 </div>
             </article>
