--- a/javascript/study/web_pop_join_push.html
+++ b/javascript/study/web_pop_join_push.html
@@ -158,7 +158,7 @@ document.querySelector(".sample01_P3").innerHTML = arr.length;
                 <!-- 2번 -->
                 <div id="sample02" class="sample">
                 <h2 class="t_tit2">02. 배열 메서드 : join() : 배열 요소 문자열을 결합 : 반환(문자열)</h2>
-                <p class="t_desc2_css">length 속성은 배열의 길이를 구할 수 있습니다.</p>
+                <p class="t_desc2_css">join() 메서드는 배열의 모든 요소를 연결해 하나의 문자열로 만듭니다.</p>
                 <div class="table">
                     <table>
                         <colgroup>
@@ -223,7 +223,7 @@ const text4 = arrNum.join('-')
                 <!-- 3번 -->
                 <div id="sample03" class="sample">
                 <h2 class="t_tit2">03. 배열 메서드 : push() / pop()</h2>
-                <p>push() 메서드는 배열 마지막 요소에 추가하고, pop()메서드는 배열 마지막 요소를 삭제합니다.</p>
+                <p class="t_desc2_css">push() 메서드는 배열의 끝에 하나 이상의 요소를 추가하고, 배열의 새로운 길이를 반환하며, pop()메서드는 배열 마지막 요소를 삭제합니다.</p>
                 <div class="table">
                     <table>
                         <colgroup>
