--- a/javascript/effect/quizEffect05.html
+++ b/javascript/effect/quizEffect05.html
@@ -131,24 +131,24 @@
                 },
                 answerResult: "2",
                 answerEx: "전체적인 가치를 따지기 위해서는 조건 중 경제성입니다.."
-            }
+            },
             { //07번 ------------------------------------------ 여기서 부터 답 적어야 함
                 answerType: "웹디자인 기능사 2014년 04회",
                 answerNum: "7",
                 answerAsk: "컬러 인쇄를 위해 C, M, Y, K 4색의 네거필름으로 만드는 과 정을 무엇이라 하는가?",
                 answerChoice: {
-                    1: "합목적성",
-                    2: "경제성",
-                    3: "심미성",
-                    4: "독창성"
+                    1: "색분해",
+                    2: "색필터",
+                    3: "색도도",
+                    4: "색수정"
                 },
-                answerResult: "2",
-                answerEx: "전체적인 가치를 따지기 위해서는 조건 중 경제성입니다.."
+                answerResult: "1",
+                answerEx: "CMYK 네거필름(negative film)으로 만드는것을 '색분해'라 부릅니다."
             },
             { //08번
                 answerType: "웹디자인 기능사 2014년 04회",
                 answerNum: "8",
-                answerAsk: "컬러 인쇄를 위해 C, M, Y, K 4색의 네거필름으로 만드는 과 정을 무엇이라 하는가?",
+                answerAsk: "다음 형태(form) 중 반드시 수학적 법칙과 함께 생기며, 가장 뚜렷한 질서를 갖는 것은?",
                 answerChoice: {
                     1: "유기적 형태",
                     2: "기하학적 형태",
@@ -156,7 +156,7 @@
                     4: "자연적 형태"
                 },
                 answerResult: "2",
-                answerEx: "전체적인 가치를 따지기 위해서는 조건 중 경제성입니다.."
+                answerEx: "기하학적 형태는 가장 뚜렷한 질서를 갖습니다 ^^b"
             },
             { //09번
                 answerType: "웹디자인 기능사 2014년 04회",
@@ -169,7 +169,7 @@
                     4: "목적에 관계없이 아름다움을 우선으로 하고, 타 제품에 비해 눈에 띄는 색으로 배색하여야 한다."
                 },
                 answerResult: "2",
-                answerEx: "전체적인 가치를 따지기 위해서는 조건 중 경제성입니다.."
+                answerEx: "색은 사회적 통념상 지니고 있는 의미가 각각 내포되어 있기 떄문에 임의로 지정해선 안됩니다."
             },
             { //10번
                 answerType: "웹디자인 기능사 2014년 04회",
@@ -182,7 +182,7 @@
                     4: "조화"
                 },
                 answerResult: "2",
-                answerEx: "전체적인 가치를 따지기 위해서는 조건 중 경제성입니다.."
+                answerEx: "디자인의 원리는 율동, 통일, 대비가 있으며 이 중 색의 점이는 율동에 해당합니다."
             },
             { //11번
                 answerType: "웹디자인 기능사 2014년 04회",
@@ -194,8 +194,8 @@
                     3: "경제성",
                     4: "유통성"
                 },
-                answerResult: "2",
-                answerEx: "전체적인 가치를 따지기 위해서는 조건 중 경제성입니다.."
+                answerResult: "4",
+                answerEx: "디자인의 조건에는 합목적성, 경제성, 심미성이 있습니다."
             },
             { //12번
                 answerType: "웹디자인 기능사 2014년 04회",
@@ -207,8 +207,8 @@
                     3: "색각",
                     4: "지각색"
                 },
-                answerResult: "2",
-                answerEx: "전체적인 가치를 따지기 위해서는 조건 중 경제성입니다.."
+                answerResult: "1",
+                answerEx: "범위의 파장 한계 내에 있는것은 가시광선 입니다~~~!!~!~!~!"
             },
             { //13번
                 answerType: "웹디자인 기능사 2014년 04회",
@@ -220,8 +220,8 @@
                     3: "기계화로 생활용품에 화려하고 복잡한 장식을 사용할 수 없게 됨",
                     4: "대량생산으로 생활용품의 대중화"
                 },
-                answerResult: "2",
-                answerEx: "전체적인 가치를 따지기 위해서는 조건 중 경제성입니다.."
+                answerResult: "1",
+                answerEx: "기게화와 대량생산으로 인한 저품질 다생산이 지속화 됨에 따라 생활용품의 품질이 저하되어 미술공예운동이 일어나게 되었습니다."
             },
             { //14번
                 answerType: "웹디자인 기능사 2014년 04회",
@@ -234,7 +234,7 @@
                     4: "중간 혼합"
                 },
                 answerResult: "2",
-                answerEx: "전체적인 가치를 따지기 위해서는 조건 중 경제성입니다.."
+                answerEx: "헬름홀츠가 발표한 학설은 가산 혼합 입니다."
             },
             { //15번
                 answerType: "웹디자인 기능사 2014년 04회",
@@ -246,8 +246,8 @@
                     3: "형태",
                     4: "음영"
                 },
-                answerResult: "2",
-                answerEx: "전체적인 가치를 따지기 위해서는 조건 중 경제성입니다.."
+                answerResult: "4",
+                answerEx: "물리적 반사 법칙에 의해 정확하고, 엄밀한 투사광과 반사광으로 구성된 과학적 결과는 음영이라고 불립니다~~~!!"
             },
             { //16번
                 answerType: "웹디자인 기능사 2014년 04회",
@@ -259,8 +259,138 @@
                     3: "대비",
                     4: "채도"
                 },
+                answerResult: "3",
+                answerEx: "대비는 색의 3속성에 포함되지 않습니다 ^^"
+            },
+            { //17번
+                answerType: "웹디자인 기능사 2014년 04회",
+                answerNum: "17",
+                answerAsk: "촉각적 질감에 대한 설명으로 틀린 것은?",
+                answerChoice: {
+                    1: "촉각적 질감에는 장식적 질감, 자연적 질감, 기계적 질감 이 있다",
+                    2: "촉각적 질감은 눈으로 볼 수 있을 뿐 아니라 손으로 만 져서 느낄 수 있는 질감이다.",
+                    3: "촉각적 질감은 2차원 디자인의 표면과 함께 3차원의 양 각(relief)으로 확대하는 것이다.",
+                    4: "촉각적 질감의 연출방법에는 자연재료사용, 재료변형, 재 료복합 등이 있다."
+                },
+                answerResult: "1",
+                answerEx: "촉각적 질감은 우리 피부가 직접적으로 만지며 느끼는 재질감을 촉각적 감각이라고 합니다."
+            },
+            { //18번
+                answerType: "웹디자인 기능사 2014년 04회",
+                answerNum: "18",
+                answerAsk: "1910년에서 1935년 사이에 러시아(구소련)에서 일어난 새로 운 조형운동으로 조형의 추상성과 기하학적 간결함, 형태의 경제성에 입각한 디자인을 기하학적 간결함, 형태의 경제성 에 입각한 디자인을 추구하였으나, 스탈린의 탄압으로 종결 된 조형운동이자 사회운동은?",
+                answerChoice: {
+                    1: "기능주의",
+                    2: "구성주의",
+                    3: "역사주의",
+                    4: "미래주의"
+                },
                 answerResult: "2",
-                answerEx: "전체적인 가치를 따지기 위해서는 조건 중 경제성입니다.."
+                answerEx: "스탈린의 탄압으로 인해 구성주의 사회운동이 종결되었습니다."
+            },
+            { //19번
+                answerType: "웹디자인 기능사 2014년 04회",
+                answerNum: "19",
+                answerAsk: "주의를 의미하며 주의표시, 돌출부위 계단의 위험요소를 나 타내는 색으로 적당한 것은?",
+                answerChoice: {
+                    1: "적색",
+                    2: "황색",
+                    3: "녹색",
+                    4: "적자색"
+                },
+                answerResult: "2",
+                answerEx: "색상은 각 고유가 가지고 있는 사회적 의미가 있으며 주로 황색은 주의 경고의 의미로 많이 쓰입니다."
+            },
+            { //20번
+                answerType: "웹디자인 기능사 2014년 04회",
+                answerNum: "20",
+                answerAsk: "다음 중 디자인의 의미에 관한 설명으로 틀린 것은?",
+                answerChoice: {
+                    1: "디자인이란 일반적으로 하나의 그림 또는 모형으로써 그 것을 전개시키는 계획 및 설계라고 할 수 있다.",
+                    2: "디자인 해위란 인간이 좀 더 사용하기 쉽고, 아름답고 쾌 적한 생활환경을 창조하는 조형 행위를 말한다.",
+                    3: "프랑스어의 데생(dessin)과 같은 어원으로, 르네상스 시대 이후 오랫동안 데생과 같이 가벼운 의미로 사용 되었다.",
+                    4: "1940년대 당시 근대 사상에 입각하여 바우하우스에서 디 자인 이념을 세우고 디자인(design)이라는 용어를 처음 사용하였다."
+                },
+                answerResult: "4",
+                answerEx: "디자인이란 개념은 바우하우스라는 곳에서 이념을 세우고 디자인이라는 용어를 사용했습니다."
+            },
+            { //더미문제
+                answerType: "웹디자인 기능사 2014년 04회",
+                answerNum: "문제번호",
+                answerAsk: "문제를써주세요문제",
+                answerChoice: {
+                    1: "menu_7",
+                    2: "total",
+                    3: "2cond_name",
+                    4: "_regnumber"
+                },
+                answerResult: "답",
+                answerEx: "해설을적어주세요해설"
+            },
+            { //21번
+                answerType: "웹디자인 기능사 2014년 04회",
+                answerNum: "21",
+                answerAsk: "웹 서비스에 대한 설명이 틀린 것은?",
+                answerChoice: {
+                    1: "명령어 기반 인터페이스를 제공하여 초보자도 쉽게 이용 할 수 있다.",
+                    2: "하이퍼미디어 기술을 통하여 정보 교류나 정보 검색을 수행한다.",
+                    3: "웹 페이지들은 링크로 연결되어 원하는 정보로 쉽게 이 동할 수 있다.",
+                    4: "문자와 이미지, 음성, 동영상 등의 멀티미디어 서비스를 제공한다."
+                },
+                answerResult: "4",
+                answerEx: ""
+            },
+            { //22번
+                answerType: "웹디자인 기능사 2014년 04회",
+                answerNum: "22",
+                answerAsk: "자바스크립트에서 변수명으로 선언할 수 없는 것은?",
+                answerChoice: {
+                    1: "menu_7",
+                    2: "total",
+                    3: "2cond_name",
+                    4: "_regnumber"
+                },
+                answerResult: "4",
+                answerEx: ""
+            },
+            { //23번
+                answerType: "웹디자인 기능사 2014년 04회",
+                answerNum: "문제번호",
+                answerAsk: "일반적으로 검색 엔진에 inter* 라고 입력했을 때 검색될 수 없는 정보는?",
+                answerChoice: {
+                    1: "internet",
+                    2: "international",
+                    3: "intercept",
+                    4: "intranet"
+                },
+                answerResult: "답",
+                answerEx: "해설을적어주세요해설"
+            },
+            { //24번
+                answerType: "웹디자인 기능사 2014년 04회",
+                answerNum: "문제번호",
+                answerAsk: "&lt;a href='http://www.hrdkorea.or.kr' target='ⓐ'&gt;에서 ⓐ에 나타날 수 있는 값과 그에 대한 설명이 틀린 것은?",
+                answerChoice: {
+                    1: "_blank : 링크된 문서를 새 창에 보여준다.",
+                    2: "_parent : 링크된 문서를 창 전체에 보여준다.",
+                    3: "_self : 링크된 문서를 하이퍼링크가 있던 현재 프레임에 보여준다.",
+                    4: "_top : 링크된 문서를 창 전체에 보여준다"
+                },
+                answerResult: "답",
+                answerEx: "해설을적어주세요해설"
+            },
+            { //25번
+                answerType: "웹디자인 기능사 2014년 04회",
+                answerNum: "25",
+                answerAsk: "&lt;a href='http://www.hrdkorea.or.kr' target='ⓐ'&gt;에서 ⓐ에 나타날 수 있는 값과 그에 대한 설명이 틀린 것은?",
+                answerChoice: {
+                    1: "_blank : 링크된 문서를 새 창에 보여준다.",
+                    2: "_parent : 링크된 문서를 창 전체에 보여준다.",
+                    3: "_self : 링크된 문서를 하이퍼링크가 있던 현재 프레임에 보여준다.",
+                    4: "_top : 링크된 문서를 창 전체에 보여준다"
+                },
+                answerResult: "답",
+                answerEx: "해설을적어주세요해설"
             },
         ];
 
@@ -275,7 +405,7 @@
                     <div class="quiz">
                         <span class="quiz__type">${question.answerType}</span>
                         <h2 class="quiz__question">
-                            <span class="number">${question.answerNum}</span>
+                            <span class="number">${question.answerNum+". "}</span>
                             <div class="ask">${question.answerAsk}</div>
                         </h2>
                         <div class="quiz__view">
