--- a/javascript/study/web_site02.html
+++ b/javascript/study/web_site02.html
@@ -179,8 +179,8 @@
                         폰트는 'GmarketSans'를 이용하고 아래의 한줄 효과 및 세줄 효과 css 코드를 통해 카드 UI를 구현합니다.
                     </p>
                     <div style="display: flex; justify-content: space-between; flex-wrap: nowrap; " class="script">
-                        <div style="width: 33%;"class="t_code">
-<pre><code class="language-css">/* 한줄 효과 */
+                        <div style="width: 33%; height: 420px;"class="t_code">
+<pre style="height: 100%" ><code style="height: 87%" class="language-css">/* 한줄 효과 */
 overflow: hidden;
 white-space: nowrap;
 text-overflow: ellipsis;
@@ -189,7 +189,7 @@ padding-right: 20px;
 </code></pre>
                         </div>
                         <div style="width: 33%;" class="t_code">
-<pre><code class="language-css">/* 세줄 효과 */
+<pre style="height: 100%" ><code style="height: 87%" class="language-css">/* 세줄 효과 */
 overflow: hidden;
 text-overflow: ellipsis;
 display: -webkit-box;
@@ -198,7 +198,7 @@ display: -webkit-box;
 </code></pre>
                         </div>
                         <div style="width: 33%;" class="t_code">
-<pre><code class="language-css"> /* ir 효과 */
+<pre style="height: 100%" ><code style="height: 87%" class="language-css"> /* ir 효과 */
 display: block;
 overflow: hidden;
 font-size: 0;
@@ -354,7 +354,8 @@ text-indent: -9999px;
                         </details>
                         <!-- 결과보기 끝 -->
                     </div>
-                </div>
+                
+                
                 <!-- CSS 코드 끝 -->
 
                 <hr>
